# CubeGame-public

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  NOTICE  README.md
.github/workflows/: cmake.yml  install-vulkan.sh
ci/travis/: install-linux.sh
shaders-build/default/: shader.frag.spv  shader.vert.spv
shaders/default/: shader.frag  shader.vert
src/: def.h  main.cpp
src/game_objects/: block.h  block_type.cpp  block_type.h  chunk.cpp  chunk.h  chunks_manager.cpp  chunks_manager.h  event_loop.cpp  event_loop.h  player.cpp  player.h
src/render/: camera.cpp  camera.h  chunk_geometry.cpp  chunk_geometry.h  draw_element.cpp  draw_element.h  glfw_window.cpp  glfw_window.h  memory_manager.cpp  memory_manager.h  render.cpp  render.h  render_synchronization.h  texture_atlas.cpp  texture_atlas.h  uniform_buffer.h  vertex.h
src/utils/: aabb.cpp  aabb.h  ray.cpp  ray.h  settings.h
src/vulkan_wrappers/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  compute_pipeline.cpp  compute_pipeline.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set_layout.cpp  descriptor_set_layout.h  event.cpp  event.h  fence.cpp  fence.h  fullscreen_surface.cpp  fullscreen_surface.h  glfw_surface.cpp  glfw_surface.h  graphics_pipeline.cpp  graphics_pipeline.h  image.cpp  image.h  image_view.cpp  image_view.h  memory.cpp  memory.h  pipeline_cache.cpp  pipeline_cache.h  pipeline_layout.cpp  pipeline_layout.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  sampler.cpp  sampler.h  semaphore.cpp  semaphore.h  (+7 more)
tests/: tests_main.cpp
textures/atlas/: atlas.xml
